bluetooth-client: Remove all devices on adapter removal

If bluetoothd fails badly (e.g. kill -9), then the devices may not be
removed before the adapter is removed. So clean up any left over device
at adapter removal as otherwise the "device-removed" signal is not fired.

Without this one ends up with stale entries in the bluetooth settings
widget after killing bluetoothd.

https://bugzilla.gnome.org/show_bug.cgi?id=791727